--- a/data/settings.json
+++ b/data/settings.json
@@ -1,12 +1,11 @@
 {
     "dry_run": false,
-    "enable_removal": false,
-    "enable_repair": false,
-    "log_level": "info",
+    "enable_removal": true,
     "auto_import_manual": true,
     "auto_handle_custom_format": true,
     "auto_remove_unparsable": true,
     "auto_remove_qbt_error": true,
+    "log_level": "info",
     "arr_instances": [
         {
             "name": "Sonarr",
