--- a/data/settings.json
+++ b/data/settings.json
@@ -5,27 +5,27 @@
     "auto_handle_custom_format": true,
     "auto_remove_unparsable": true,
     "auto_remove_qbt_error": true,
-    "log_level": "info",
+    "log_level": "debug",
     "arr_instances": [
         {
             "name": "Sonarr",
-            "url": "http://sonarr:8989",
-            "api_key": "YOUR_SONARR_API_KEY"
+            "url": "https://jrcorwin-sonarr.elfhosted.com",
+            "api_key": "61b35570ca7b42588f5d8fa62d279672"
         },
         {
             "name": "Sonarr4K",
-            "url": "http://sonarr4k:8989",
-            "api_key": "YOUR_SONARR4K_API_KEY"
+            "url": "https://jrcorwin-sonarr4k.elfhosted.com",
+            "api_key": "f755bf36657e40199f88819d5178486b"
         },
         {
             "name": "Radarr",
-            "url": "http://radarr:7878",
-            "api_key": "YOUR_RADARR_API_KEY"
+            "url": "https://jrcorwin-radarr.elfhosted.com",
+            "api_key": "93f30952e2cb45c2b7f6728ed38d924e"
         },
         {
             "name": "Radarr4K",
-            "url": "http://radarr4k:7878",
-            "api_key": "YOUR_RADARR4K_API_KEY"
+            "url": "https://jrcorwin-radarr4k.elfhosted.com",
+            "api_key": "5c4158c3ea4f4e94be1306091853ac61"
         }
     ]
 }
