--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,21 @@
 version: '3.8'
+
 services:
   backend:
+    image: arrguardian-backend
     build:
       context: ./backend
-    container_name: arrguardian-backend
     environment:
-      - SONARR_URL=http://sonarr:8989
-      - SONARR4K_URL=http://sonarr4k:8989
-      - RADARR_URL=http://radarr:7878
-      - RADARR4K_URL=http://radarr4k:7878
-      - QBITTORRENT_HOST=qBittorrent
-      - QBITTORRENT_PORT=8080
+      SONARR_URL: "https://jrcorwin-sonarr.elfhosted.com"
+      SONARR4K_URL: "https://jrcorwin-sonarr4k.elfhosted.com"
+      RADARR_URL: "https://jrcorwin-radarr.elfhosted.com"
+      RADARR4K_URL: "https://jrcorwin-radarr4k.elfhosted.com"
     ports:
       - "8000:8000"
-    volumes:
-      - ./data:/data
 
   frontend:
+    image: arrguardian-frontend
     build:
       context: ./frontend
-    container_name: arrguardian-frontend
     ports:
-      - "3000:3000"
+      - "3000:80"
